--- a/hashtagdateme/index.html
+++ b/hashtagdateme/index.html
@@ -24,7 +24,7 @@
 	<meta property="og:site_name" content="Hashtagdateme">
 
     <link rel="canonical" href="http://blog.hashtagdateme.com/hashtagdateme/">
-
+    <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico?">
     <link href="http://blog.hashtagdateme.com/atom.xml" type="application/atom+xml" rel="alternate" title="Hashtagdateme Atom Feed">
     <link href="http://blog.hashtagdateme.com/sitemap.xml" type="application/xml" rel="sitemap" title="Sitemap">
 
