--- a/relationships/10-Top-Tips-for-Surviving-New-Years-Being-Single/index.html
+++ b/relationships/10-Top-Tips-for-Surviving-New-Years-Being-Single/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>10 top tips for Surviving New Year’s being single • Hashtagdateme</title>
+    <title>10 Top Tips for Surviving New Year’s being single • Hashtagdateme</title>
     <meta name="description" content="Wow could you believe you just survived being single during Christmas and guess what is lurking around the corner? Yes you guessed it, New Year&rsquo;s Eve!! It seemed hard enough having to go through Christmas alone but if you survived that then New Year&rsquo;s Eve is just as easy. Most people want that special someone to share that new year&rsquo;s &lsquo;midnight kiss&rsquo; with and the reality of not having that special someone this year makes you think if there will be another lonely new year&rsquo;s eve next year. Though it can feel more daunting to be alone on New Year&rsquo;s Eve than Valentine&rsquo;s Day a few simple tips can help you banish that feeling of being alone and kick start love for the New Year&hellip;
 1. TIME TO MAKE PLANS
 If possible try to make plans in advance so you are not panicking last minute on what you can do on New Year&rsquo;s Eve. Don&rsquo;t be a potato couch and sit in front of the TV watching the fireworks get your butt off the couch and go and enjoy the beautiful display in person. Even if you leave your plans to last minute don&rsquo;t stress you are sure to find a friend who wants to get off their couch too!
@@ -62,7 +62,7 @@ So as the New Year creeps around the corner try take these into account and just
 	<!-- Open Graph -->
 	<meta property="og:locale" content="en">
 	<meta property="og:type" content="article">
-	<meta property="og:title" content="10 top tips for Surviving New Year’s being single">
+	<meta property="og:title" content="10 Top Tips for Surviving New Year’s Being Single">
 	<meta property="og:description" content="Wow could you believe you just survived being single during Christmas and guess what is lurking around the corner? Yes you guessed it, New Year&rsquo;s Eve!! It seemed hard enough having to go through Christmas alone but if you survived that then New Year&rsquo;s Eve is just as easy. Most people want that special someone to share that new year&rsquo;s &lsquo;midnight kiss&rsquo; with and the reality of not having that special someone this year makes you think if there will be another lonely new year&rsquo;s eve next year. Though it can feel more daunting to be alone on New Year&rsquo;s Eve than Valentine&rsquo;s Day a few simple tips can help you banish that feeling of being alone and kick start love for the New Year&hellip;
 1. TIME TO MAKE PLANS
 If possible try to make plans in advance so you are not panicking last minute on what you can do on New Year&rsquo;s Eve. Don&rsquo;t be a potato couch and sit in front of the TV watching the fireworks get your butt off the couch and go and enjoy the beautiful display in person. Even if you leave your plans to last minute don&rsquo;t stress you are sure to find a friend who wants to get off their couch too!
@@ -189,7 +189,7 @@ So as the New Year creeps around the corner try take these into account and just
   </nav><!-- /.breadcrumbs -->
 
 		<div class="page-title">
-			<h1>10 top tips for Surviving New Year’s being single</h1>
+			<h1>10 Top Tips for Surviving New Year’s Being Single</h1>
 		</div>
 		<div class="inner-wrap">
 			<div id="content" class="page-content" itemprop="articleBody">
