--- a/relationships/10-Top-Tips-for-Surviving-New-Years-Being-Single/index.html
+++ b/relationships/10-Top-Tips-for-Surviving-New-Years-Being-Single/index.html
@@ -221,10 +221,10 @@ So as the New Year creeps around the corner try take these into account and just
 					
 
 <div class="author-image">
-	<img src="http://blog.hashtagdateme.com/images/bio-photo.jpg" alt="">
+	<img src="http://blog.hashtagdateme.com/images/maria.jpg" alt="">
 </div><!-- ./author-image -->
 <div class="author-content">
-	<h3 class="author-name" >Written by <span itemprop="author"></span></h3>
+	<h3 class="author-name" >Written by Maria Brown<span itemprop="author"></span></h3>
 	<p class="author-bio"></p>
 </div><!-- ./author-content -->
 					<div class="inline-btn">
