--- a/dating/hashtagging-your-sexual-orientation/index.html
+++ b/dating/hashtagging-your-sexual-orientation/index.html
@@ -148,9 +148,9 @@
 	<p class="author-bio"></p>
 </div><!-- ./author-content -->
 					<div class="inline-btn">
-	<a class="btn-social twitter" href="https://twitter.com/intent/tweet?text=Hashtagging%20Your%20Sexual%20Orientation&amp;url=http://blog.hashtagdateme.comhttp://blog.hashtagdateme.com/dating/hashtagging-your-sexual-orientation/&amp;via=hashtagdateme" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i> Share on Twitter</a>
-	<a class="btn-social facebook" href="https://www.facebook.com/sharer/sharer.php?u=http://blog.hashtagdateme.comhttp://blog.hashtagdateme.com/dating/hashtagging-your-sexual-orientation/" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i> Share on Facebook</a>
-	<a class="btn-social google-plus"  href="https://plus.google.com/share?url=http://blog.hashtagdateme.comhttp://blog.hashtagdateme.com/dating/hashtagging-your-sexual-orientation/" target="_blank"><i class="fa fa-google-plus" aria-hidden="true"></i> Share on Google+</a>
+	<a class="btn-social twitter" href="https://twitter.com/intent/tweet?text=Hashtagging%20Your%20Sexual%20Orientation&amp;url=http://blog.hashtagdateme.com/dating/hashtagging-your-sexual-orientation/&amp;via=hashtagdateme" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i> Share on Twitter</a>
+	<a class="btn-social facebook" href="https://www.facebook.com/sharer/sharer.php?u=http://blog.hashtagdateme.com/dating/hashtagging-your-sexual-orientation/" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i> Share on Facebook</a>
+	<a class="btn-social google-plus"  href="https://plus.google.com/share?url=http://blog.hashtagdateme.com/dating/hashtagging-your-sexual-orientation/" target="_blank"><i class="fa fa-google-plus" aria-hidden="true"></i> Share on Google+</a>
 </div><!-- /.share-this -->
 
 					<div class="page-meta">
