--- a/dating/how-to-take-the-perfect-selfie-for-your-dating-profile/index.html
+++ b/dating/how-to-take-the-perfect-selfie-for-your-dating-profile/index.html
@@ -172,9 +172,9 @@ Try to relax &ndash; it&rsquo;s just a selfie, don&rsquo;t overthink it and keep
 	<p class="author-bio"></p>
 </div><!-- ./author-content -->
 					<div class="inline-btn">
-	<a class="btn-social twitter" href="https://twitter.com/intent/tweet?text=How%20to%20Take%20the%20Perfect%20Selfie%20for%20Your%20Dating%20Profile&amp;url=http://blog.hashtagdateme.comhttp://blog.hashtagdateme.com/dating/how-to-take-the-perfect-selfie-for-your-dating-profile/&amp;via=hashtagdateme" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i> Share on Twitter</a>
-	<a class="btn-social facebook" href="https://www.facebook.com/sharer/sharer.php?u=http://blog.hashtagdateme.comhttp://blog.hashtagdateme.com/dating/how-to-take-the-perfect-selfie-for-your-dating-profile/" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i> Share on Facebook</a>
-	<a class="btn-social google-plus"  href="https://plus.google.com/share?url=http://blog.hashtagdateme.comhttp://blog.hashtagdateme.com/dating/how-to-take-the-perfect-selfie-for-your-dating-profile/" target="_blank"><i class="fa fa-google-plus" aria-hidden="true"></i> Share on Google+</a>
+	<a class="btn-social twitter" href="https://twitter.com/intent/tweet?text=How%20to%20Take%20the%20Perfect%20Selfie%20for%20Your%20Dating%20Profile&amp;url=http://blog.hashtagdateme.com/dating/how-to-take-the-perfect-selfie-for-your-dating-profile/&amp;via=hashtagdateme" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i> Share on Twitter</a>
+	<a class="btn-social facebook" href="https://www.facebook.com/sharer/sharer.php?u=http://blog.hashtagdateme.com/dating/how-to-take-the-perfect-selfie-for-your-dating-profile/" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i> Share on Facebook</a>
+	<a class="btn-social google-plus"  href="https://plus.google.com/share?url=http://blog.hashtagdateme.com/dating/how-to-take-the-perfect-selfie-for-your-dating-profile/" target="_blank"><i class="fa fa-google-plus" aria-hidden="true"></i> Share on Google+</a>
 </div><!-- /.share-this -->
 
 					<div class="page-meta">
