--- a/relationships/10-Top-Tips-for-Surviving-New-Years-Being-Single/index.html
+++ b/relationships/10-Top-Tips-for-Surviving-New-Years-Being-Single/index.html
@@ -228,9 +228,9 @@ So as the New Year creeps around the corner try take these into account and just
 	<p class="author-bio"></p>
 </div><!-- ./author-content -->
 					<div class="inline-btn">
-	<a class="btn-social twitter" href="https://twitter.com/intent/tweet?text=10%20top%20tips%20for%20Surviving%20New%20Year’s%20being%20single&amp;url=http://blog.hashtagdateme.comhttp://blog.hashtagdateme.com/relationships/10-Top-Tips-for-Surviving-New-Years-Being-Single/&amp;via=hashtagdateme" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i> Share on Twitter</a>
-	<a class="btn-social facebook" href="https://www.facebook.com/sharer/sharer.php?u=http://blog.hashtagdateme.comhttp://blog.hashtagdateme.com/relationships/10-Top-Tips-for-Surviving-New-Years-Being-Single/" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i> Share on Facebook</a>
-	<a class="btn-social google-plus"  href="https://plus.google.com/share?url=http://blog.hashtagdateme.comhttp://blog.hashtagdateme.com/relationships/10-Top-Tips-for-Surviving-New-Years-Being-Single/" target="_blank"><i class="fa fa-google-plus" aria-hidden="true"></i> Share on Google+</a>
+	<a class="btn-social twitter" href="https://twitter.com/intent/tweet?text=10%20top%20tips%20for%20Surviving%20New%20Year’s%20being%20single&amp;url=http://blog.hashtagdateme.com/relationships/10-Top-Tips-for-Surviving-New-Years-Being-Single/&amp;via=hashtagdateme" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i> Share on Twitter</a>
+	<a class="btn-social facebook" href="https://www.facebook.com/sharer/sharer.php?u=http://blog.hashtagdateme.com/relationships/10-Top-Tips-for-Surviving-New-Years-Being-Single/" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i> Share on Facebook</a>
+	<a class="btn-social google-plus"  href="https://plus.google.com/share?url=http://blog.hashtagdateme.com/relationships/10-Top-Tips-for-Surviving-New-Years-Being-Single/" target="_blank"><i class="fa fa-google-plus" aria-hidden="true"></i> Share on Google+</a>
 </div><!-- /.share-this -->
 
 					<div class="page-meta">
