--- a/hashtagdateme/welcome-to-hashtagdateme/index.html
+++ b/hashtagdateme/welcome-to-hashtagdateme/index.html
@@ -164,9 +164,9 @@ Not sure what hashtags to use, here are some ideas:
 	<p class="author-bio"></p>
 </div><!-- ./author-content -->
 					<div class="inline-btn">
-	<a class="btn-social twitter" href="https://twitter.com/intent/tweet?text=Welcome%20to%20Hashtagdateme&amp;url=http://blog.hashtagdateme.comhttp://blog.hashtagdateme.com/hashtagdateme/welcome-to-hashtagdateme/&amp;via=hashtagdateme" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i> Share on Twitter</a>
-	<a class="btn-social facebook" href="https://www.facebook.com/sharer/sharer.php?u=http://blog.hashtagdateme.comhttp://blog.hashtagdateme.com/hashtagdateme/welcome-to-hashtagdateme/" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i> Share on Facebook</a>
-	<a class="btn-social google-plus"  href="https://plus.google.com/share?url=http://blog.hashtagdateme.comhttp://blog.hashtagdateme.com/hashtagdateme/welcome-to-hashtagdateme/" target="_blank"><i class="fa fa-google-plus" aria-hidden="true"></i> Share on Google+</a>
+	<a class="btn-social twitter" href="https://twitter.com/intent/tweet?text=Welcome%20to%20Hashtagdateme&amp;url=http://blog.hashtagdateme.com/hashtagdateme/welcome-to-hashtagdateme/&amp;via=hashtagdateme" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i> Share on Twitter</a>
+	<a class="btn-social facebook" href="https://www.facebook.com/sharer/sharer.php?u=http://blog.hashtagdateme.com/hashtagdateme/welcome-to-hashtagdateme/" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i> Share on Facebook</a>
+	<a class="btn-social google-plus"  href="https://plus.google.com/share?url=http://blog.hashtagdateme.com/hashtagdateme/welcome-to-hashtagdateme/" target="_blank"><i class="fa fa-google-plus" aria-hidden="true"></i> Share on Google+</a>
 </div><!-- /.share-this -->
 
 					<div class="page-meta">
