--- a/dating/how-to-choose-quality-dating-profile-pictures/index.html
+++ b/dating/how-to-choose-quality-dating-profile-pictures/index.html
@@ -53,7 +53,7 @@ A key factor is to always smile in your pictures. This makes you more approachab
 	<meta name="twitter:creator" content="@hashtagdateme">
 	
 	<meta name="twitter:card" content="summary">
-	<meta name="twitter:image" content="http://blog.hashtagdateme.com/images/">
+	<meta name="twitter:image" content="http://blog.hashtagdateme.com/images/datingprofilepicture.jpg">
 	
 	<!-- Open Graph -->
 	<meta property="og:locale" content="en">
