--- a/dating/how-to-choose-quality-dating-profile-pictures/index.html
+++ b/dating/how-to-choose-quality-dating-profile-pictures/index.html
@@ -213,10 +213,10 @@ A key factor is to always smile in your pictures. This makes you more approachab
 					
 
 <div class="author-image">
-	<img src="http://blog.hashtagdateme.com/images/bio-photo.jpg" alt="">
+	<img src="http://blog.hashtagdateme.com/images/olivia.jpg" alt="">
 </div><!-- ./author-image -->
 <div class="author-content">
-	<h3 class="author-name" >Written by <span itemprop="author"></span></h3>
+	<h3 class="author-name" >Written by <span itemprop="author">Olivia</span></h3>
 	<p class="author-bio"></p>
 </div><!-- ./author-content -->
 					<div class="inline-btn">
