--- a/dating/how-to-choose-quality-dating-profile-pictures/index.html
+++ b/dating/how-to-choose-quality-dating-profile-pictures/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>How to Choose Quality Profile Pictures • Hashtagdateme</title>
+    <title>How to Choose Quality Dating Profile Pictures • Hashtagdateme</title>
     <meta name="description" content="Having a quality profile picture attracts more attention than those without any pictures or poor quality photo. By adding a picture it can increase the chance of your profile page getting more noticed. But getting it right is always the conundrum most people have. So it is important to get it right from the start.
 Avoid poor quality pictures
 When taking a picture you want to make sure it is of good quality. Nobody wants to look at a blurry picture or one taken in the dark. You want to choose a clear headshot of yourself preferably smiling no need to look broody!&nbsp; Making sure you choose a well-lit environment, natural light is the best. You want the user to see the real you so for the girls you want to keep your make-up subtle also same applies to clothing or how you would normally look in your daily activities. You want people to see your face so for the men you want to stay away from choosing pictures of you wearing clothing that hides your face or you looking away from the camera.
@@ -27,7 +27,7 @@ A key factor is to always smile in your pictures. This makes you more approachab
     <meta name="keywords" content="">
     
     	<!-- Twitter Cards -->
-	<meta name="twitter:title" content="How to Choose Quality Profile Pictures">
+	<meta name="twitter:title" content="How to Choose Quality Dating Profile Pictures">
 	<meta name="twitter:description" content="Having a quality profile picture attracts more attention than those without any pictures or poor quality photo. By adding a picture it can increase the chance of your profile page getting more noticed. But getting it right is always the conundrum most people have. So it is important to get it right from the start.
 Avoid poor quality pictures
 When taking a picture you want to make sure it is of good quality. Nobody wants to look at a blurry picture or one taken in the dark. You want to choose a clear headshot of yourself preferably smiling no need to look broody!&nbsp; Making sure you choose a well-lit environment, natural light is the best. You want the user to see the real you so for the girls you want to keep your make-up subtle also same applies to clothing or how you would normally look in your daily activities. You want people to see your face so for the men you want to stay away from choosing pictures of you wearing clothing that hides your face or you looking away from the camera.
@@ -58,7 +58,7 @@ A key factor is to always smile in your pictures. This makes you more approachab
 	<!-- Open Graph -->
 	<meta property="og:locale" content="en">
 	<meta property="og:type" content="article">
-	<meta property="og:title" content="How to Choose Quality Profile Pictures">
+	<meta property="og:title" content="How to Choose Quality Dating Profile Pictures">
 	<meta property="og:description" content="Having a quality profile picture attracts more attention than those without any pictures or poor quality photo. By adding a picture it can increase the chance of your profile page getting more noticed. But getting it right is always the conundrum most people have. So it is important to get it right from the start.
 Avoid poor quality pictures
 When taking a picture you want to make sure it is of good quality. Nobody wants to look at a blurry picture or one taken in the dark. You want to choose a clear headshot of yourself preferably smiling no need to look broody!&nbsp; Making sure you choose a well-lit environment, natural light is the best. You want the user to see the real you so for the girls you want to keep your make-up subtle also same applies to clothing or how you would normally look in your daily activities. You want people to see your face so for the men you want to stay away from choosing pictures of you wearing clothing that hides your face or you looking away from the camera.
@@ -99,7 +99,14 @@ A key factor is to always smile in your pictures. This makes you more approachab
       <script src="http://blog.hashtagdateme.com/js/vendor/html5shiv.min.js"></script>
       <script src="http://blog.hashtagdateme.com/js/vendor/respond.min.js"></script>
     <![endif]-->
-
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+  ga('create', 'UA-90768287-1', 'auto');
+  ga('send', 'pageview');
+</script>
   </head>
 
   <body id="js-body">
