--- a/dating/how-to-choose-quality-dating-profile-pictures/index.html
+++ b/dating/how-to-choose-quality-dating-profile-pictures/index.html
@@ -190,28 +190,28 @@ A key factor is to always smile in your pictures. This makes you more approachab
   </nav><!-- /.breadcrumbs -->
 
 		<div class="page-title">
-			<h1>How to Choose Quality Profile Pictures</h1>
+			<h1>How to Choose Quality Dating Profile Pictures</h1>
 		</div>
 		<div class="inner-wrap">
 			<div id="content" class="page-content" itemprop="articleBody">
 				<p>Having a quality profile picture attracts more attention than those without any pictures or poor quality photo. By adding a picture it can increase the chance of your profile page getting more noticed. But getting it right is always the conundrum most people have. So it is important to get it right from the start.</p>
 <h2>Avoid poor quality pictures</h2>
 <p>When taking a picture you want to make sure it is of good quality. Nobody wants to look at a blurry picture or one taken in the dark. You want to choose a clear headshot of yourself preferably smiling no need to look broody!&nbsp; Making sure you choose a well-lit environment, natural light is the best. You want the user to see the real you so for the girls you want to keep your make-up subtle also same applies to clothing or how you would normally look in your daily activities. You want people to see your face so for the men you want to stay away from choosing pictures of you wearing clothing that hides your face or you looking away from the camera.</p>
-<p>&nbsp;</p>
+
 <h2>Pick a full length shot</h2>
 <p>Always a key practice to upload a picture of a full shot of yourself, because it&rsquo;s common decency.&nbsp;&nbsp;People want to know what you actually look like. Automatically you see a picture of someone half cut out of the image and you start thinking they may have something to hide. And we know it&rsquo;s not the other half of the picture that&rsquo;s missing!</p>
 <p>Posting at least one full body shot will keep people away from being suspicious of you.</p>
 <p>This helps because people then know you are an honest real genuine person. You get many people posting pictures that are deceptive and misleading. If they see who you are from the start they&rsquo;re more likely to be more attracted to you as it shows you&rsquo;re confident and honest about who you are and that gives you an upper hand when you feel like you are competing with someone who looks like a model!</p>
-<p>&nbsp;</p>
+
 <h2>Choose a recent and accurate picture</h2>
 <p>Nothing worse than turning up for the first time on a date to see that your date miraculously gained a few extra pounds overnight or aged in a day! You want to showcase your true self as it&rsquo;s more than likely when meeting someone for the first time your date will feel they have been deceived and lied to and there probably won&rsquo;t be another date. You want to show your age and physical appearance with honesty don&rsquo;t be scared or shy as being confident is what attracts people. Bear in mind you are online to meet your potential partner so you don&rsquo;t want to start out your relationship based on a deception. Showcase the real you, warts and all. So definitely don&rsquo;t Photoshop your pictures! Be yourself and someone will find you amazing just the way you are.</p>
-<p>&nbsp;</p>
+
 <h2>Doing something you love</h2>
 <p>A standard picture of you just out partying only shows you like to party a lot but nothing that really shows you as a person. Choose an image that maybe showcases your talent &ndash; playing the guitar to crafting a chair! When you show that you live an active lifestyle besides going out drinking all the time people are more likely to find you interesting. This also is a great conversation starter if people see you doing something interesting in your picture. If you feel that you don&rsquo;t have pictures showing you doing something outdoor or indoor get some! Next time you do something interesting take a picture &ndash; don&rsquo;t forget to smile! These all create an opening for people to message you if they see you are into similar interests that they are from skiing to rock climbing. Soon you realize you&rsquo;re chatting away for hours on your favourite topic!</p>
-<p>&nbsp;</p>
+
 <h2>Less selfies</h2>
 <p>Yes we all love a bit of selfie but leave that for your social media! When you have endless pictures of you just posing in the bathroom or pouting in your bedroom, it only looks like you have no interest even worse no friends! Choose a picture that shows your social side a few pictures of you out with your family and friends shows that you have an interesting and sociable character. It also shows that you don&rsquo;t care just about yourself! Don&rsquo;t be afraid to post pictures of you enjoying a good time with your friend be it you doing something silly like having a piggyback rally &ndash; this will show your playful side and the natural you. Do keep your group pictures to a reasonable size nobody wants try spot you in the crowd &ndash; if possible choose pictures that there is a small group of you but not all photos uploaded should be of you in a group people want to see the whole you on your own, a few will suffice. If you are going to post selfies, keep these to a maximum of 2 selfies and do not set these as your main profile picture.</p>
-<p>&nbsp;</p>
+
 <h2>Why so glum?</h2>
 <p>A key factor is to always smile in your pictures. This makes you more approachable &ndash; you won&rsquo;t approach someone who looks like they&rsquo;re seeing red!! Everyone loves a nice smile &ndash; research has shown the best photo that are taken are usually of people smiling. You give that impression that you are friendly and happy. So next time you pose make sure to put on your best smile.</p>
 
