--- a/dating/how-to-make-the-best-online-dating-profile-to-attract-potential-dates/index.html
+++ b/dating/how-to-make-the-best-online-dating-profile-to-attract-potential-dates/index.html
@@ -96,7 +96,16 @@ By following these simple rules you are on your way to creating your ideal datin
       <script src="http://blog.hashtagdateme.com/js/vendor/html5shiv.min.js"></script>
       <script src="http://blog.hashtagdateme.com/js/vendor/respond.min.js"></script>
     <![endif]-->
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
+  ga('create', 'UA-91330868-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
   </head>
 
   <body id="js-body">
