--- a/dating/how-to-choose-quality-dating-profile-pictures/index.html
+++ b/dating/how-to-choose-quality-dating-profile-pictures/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html itemscope itemtype="http://schema.org/Article">
   <head>
     <meta charset="utf-8">
     <title>How to Choose Quality Dating Profile Pictures • Hashtagdateme</title>
@@ -84,6 +84,16 @@ A key factor is to always smile in your pictures. This makes you more approachab
 	<meta property="og:url" content="http://blog.hashtagdateme.com/dating/how-to-choose-quality-dating-profile-pictures/">
 	<meta property="og:site_name" content="Hashtagdateme">
 
+	  
+	  <!-- Update your html tag to include the itemscope and itemtype attributes. -->
+
+<!-- Add the following three tags inside head. -->
+<meta itemprop="name" content="How to Choose Quality Dating Profile Pictures">
+<meta itemprop="description" content="How to Choose Quality Dating Profile Pictures">
+<meta itemprop="image" content="http://blog.hashtagdateme.com/images/datingprofilepicture.jpg">
+	  
+	  
+	  
     <link rel="canonical" href="http://blog.hashtagdateme.com/dating/how-to-choose-quality-dating-profile-pictures/">
 
     <link href="http://blog.hashtagdateme.com/atom.xml" type="application/atom+xml" rel="alternate" title="Hashtagdateme Atom Feed">
