--- a/index.html
+++ b/index.html
@@ -69,6 +69,9 @@
   
     
     <li><a href="http://blog.hashtagdateme.com/relationships/" >Relationships</a></li>
+		
+   
+   <li><a href="http://blog.hashtagdateme.com//social/" >Social</a></li>	
   
     
     <li><a href="http://blog.hashtagdateme.com/events/" >Events</a></li>
@@ -98,7 +101,13 @@
         <div class="title">Relationships</div>
         <p class="excerpt">Tips and Advice on relationships</p>
       </a>
-    </li><li>
+    </li><li><li>
+      <a href="http://blog.hashtagdateme.com//social/">
+        <img src="http://blog.hashtagdateme.com//images/socialnetwork.jpg" alt="teaser" class="teaser">
+        <div class="title">Social</div>
+        <p class="excerpt">Friends, social networking, collaboration</p>
+      </a>
+    </li>
       <a href="http://blog.hashtagdateme.com/events/">
         <img src="http://blog.hashtagdateme.com/images/events.jpg" alt="teaser" class="teaser">
         <div class="title">Events</div>
