--- a/relationships/how-to-celebrate-national-spouse-day-in-2017/index.html
+++ b/relationships/how-to-celebrate-national-spouse-day-in-2017/index.html
@@ -180,7 +180,7 @@ This is a great game to play with your partner. With a pen and paper at hand, wr
   </nav><!-- /.breadcrumbs -->
 
 		<div class="page-title">
-			<h1>How to Celebrate National Spouse Day in 2017</h1>
+			<h1><strong>How to Celebrate National Spouse Day in 2017</strong></h1>
 		</div>
 		<div class="inner-wrap">
 			<div id="content" class="page-content" itemprop="articleBody">
@@ -189,9 +189,9 @@ This is a great game to play with your partner. With a pen and paper at hand, wr
 <p>In a fast paced world and with increasingly busy lifestyles it can take a toll on a marriage leaving our partners feeling neglected. Here are some things you can do today to make your spouse feel special and that you care about them:</p>
 <p>Write a poem dedicated to your spouse</p>
 <p>You don&rsquo;t have to be Rumi to capture the love of your spouse, one of the sweetest thing to do is put your feelings for your spouse in the written word. You can easily use many apps online to create a bespoke poetry with an image as a background to express your feelings. If you are not feeling too poetic simply stick a love note somewhere your partner would look and surprise them.</p>
-<h2>Go on a date</h2>
+<h2><strong>Go on a date</strong></h2>
 <p>Reserve a date one that both you and your partner will enjoy, maybe he or she is a real foodie. Explore your area and try something new.</p>
-<h2>Cook something special</h2>
+<h2><strong>Cook something special</strong></h2>
 <p>If you&rsquo;re not fancying eating out make a special feast at home together enjoying each other&rsquo;s company. Cook your partners favorite meal or try something new.</p>
 <h2>Get your partner a gift</h2>
 <p>Although there is no need to get your partner a gift on National Spouse Day, if you did neglect your anniversary now is the time to make up for it. Get your partner something they&rsquo;ve been wanting for a while, go ahead and surprise them.</p>
